<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ralatelayoutupload"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEE"
    android:gravity="center_horizontal" >

    <!-- 顶部浏览按钮 -->

    <LinearLayout
        android:id="@+id/uploadLayTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/imagescan_button"
            style="?android:attr/buttonStyleInset"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="13dp"
            android:text="@string/imagescan_text"
            android:textColor="#FFF"
            android:background="@drawable/orange_bt_style"
            android:textSize="24sp"
            android:typeface="monospace" />
    </LinearLayout>

    <!-- 底部操作按钮 -->

    <TableLayout
        android:id="@+id/uploadLayBottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="0,1,2" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/upload_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:background="@drawable/orange_bt_samll_style"
                android:text="@string/uploadimage_text"
                android:textColor="#EFE" />

            <Button
                android:id="@+id/upload_compress_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:background="@drawable/orange_bt_samll_style"
                android:text="@string/upload_compress_text"
                android:textColor="#EFE" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/upload_pause_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/orange_bt_samll_style"
                android:text="@string/upload_pause_text"
                android:textColor="#EFE" />

            <Button
                android:id="@+id/upload_goon_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/orange_bt_samll_style"
                android:text="@string/upload_goon_text"
                android:textColor="#EFE" />

            <Button
                android:id="@+id/upload_cancel_button"
                style="?android:attr/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/orange_bt_samll_style"
                android:text="@string/upload_cancel_text"
                android:textColor="#EFE" />
        </TableRow>
    </TableLayout>

    <!-- 中间图片显示 -->

	<RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/uploadLayBottom"
        android:layout_below="@id/uploadLayTop"
        android:paddingRight="20dp"
        android:paddingLeft="20dp" >

        <LinearLayout
            android:id="@+id/imageInfoContain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical" >

	        <TextView
	            android:id="@+id/image_path"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="0dp"
	            android:padding="0dp"
	            android:text="@string/upload_filepath"
	            android:textColor="#33E"
	            android:textSize="18sp" />
	        <TextView
	            android:id="@+id/imageUpRate"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="0dp"
	            android:padding="0dp"
	            android:text="@string/image_upload_rate"
	            android:textColor="#33E"
	            android:textSize="18sp" />
	        <TextView
	            android:id="@+id/imageUpSize"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="0dp"
	            android:padding="0dp"
	            android:text="@string/image_upload_size"
	            android:textColor="#33E"
	            android:textSize="18sp" />
	        <TextView
	            android:id="@+id/imageTotalSize"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="0dp"
	            android:padding="0dp"
	            android:text="@string/image_total_size"
	            android:textColor="#33E"
	            android:textSize="18sp" />
	        <TextView
	            android:id="@+id/imageUpTime"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="0dp"
	            android:padding="0dp"
	            android:text="@string/image_upload_time"
	            android:textColor="#33E"
	            android:textSize="18sp" />
	        <TextView
	            android:id="@+id/imageWeburl"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="0dp"
	            android:padding="0dp"
	            android:text="@string/image_web_url"
	            android:autoLink="all"
	            android:textColor="#33E"
	            android:textSize="18sp" />
            
        </LinearLayout>
	    <ImageView
	        android:id="@+id/mImageView"
	        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        	android:layout_alignParentTop="true"
        	android:layout_above="@id/imageInfoContain"
	        android:contentDescription="@string/image_default_des"
	        android:scaleType="centerInside"
	        android:src="@drawable/default_img" />
	</RelativeLayout>

</RelativeLayout>